--- a/index.html
+++ b/index.html
@@ -84,15 +84,24 @@
     /* 固定按钮在右上角 */
     #fixedButton {
         position: fixed;
-        top: 10px;
-        right: 10px;
+        top: 20px;
+        right: 20px;
         padding: 10px 20px;
-        background-color: #007BFF;
-        color: white;
-        border: none;
+        background-color: #f0f0f0; /* 浅灰色背景 */
+        color: #333; /* 深灰色文字 */
+        border: 1px solid #ccc; /* 浅灰色边框 */
         border-radius: 5px;
         cursor: pointer;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        text-decoration: none;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 轻微阴影 */
     }
+
+    #fixedButton:hover {
+        background-color: #e0e0e0; /* 更浅的灰色背景 */
+    }
+</style>
 </style>
 
 
