remove some long dance

--- a/index.html
+++ b/index.html
@@ -303,17 +303,17 @@
 		<div><a href="./gallery.html" style="color:cornflowerblue;padding:0;border:none;background:none">▶ More Examples on InterDance Gallery</a></div>
 		<table>
 		    <tr style="display:table-row">
+          <td>
+              <div>
+          <iframe src="https://www.youtube.com/embed/4vYpuA74BHw" title="quick show Rumba" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+              <div style="text-align: center; font-size: large;">
+                  <span style="font-style:italic">Rumba</span>
+              </div>
+          </td>
 		        <td>
 		            <div>
-						<iframe src="https://www.youtube.com/embed/7jOGt92EvZU/" title="quick show Waltz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-		            </div>
-		            <div style="text-align: center; font-size: large;">
-		                <span style="font-style:italic">Waltz</span>
-		            </div>
-        		</td>
-		        <td>
-		            <div>
-						<iframe src="https://www.youtube.com/embed/8TNQC9sxEeQ" title="quick show Chacha" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/qekhfSb5pnI" title="quick show Chacha" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Cha Cha</span>
@@ -321,22 +321,23 @@
         		</td>
 			</tr>
 		    <tr style="display:table-row">
+          <td>
+              <div>
+          <iframe src="https://www.youtube.com/embed/wV8HjR2zPag/" title="quick show Waltz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+              <div style="text-align: center; font-size: large;">
+                  <span style="font-style:italic">Waltz</span>
+              </div>
+          </td>
 		        <td>
 		            <div>
-						<iframe src="https://www.youtube.com/embed/O8GL_P_1SKs" title="quick show Jazz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/6gVjw98Y-Ak" title="quick show Jazz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Jazz</span>
 		            </div>
         		</td>
-		        <td>
-		            <div>
-						<iframe src="https://www.youtube.com/embed/4vYpuA74BHw" title="quick show Rumba" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-		            </div>
-		            <div style="text-align: center; font-size: large;">
-		                <span style="font-style:italic">Rumba</span>
-		            </div>
-        		</td>
+            
 			</tr>
 		    <tr style="display:table-row">
 		        <td>
