--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://interdance.github.io/"
+                <a href="https://drive.google.com/drive/folders/10CAQ_DA9IS87-3phPpiMel9B8UFD-szF?usp=sharing"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
