--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       "isAccessibleForFree": True,
       "license" : "https://creativecommons.org/licenses/by/4.0",
       "keywords": ["motion generation", "dance generation", "music to dance", "interaction generation", "duet dance"],
-      "distribution.contentUrl": "https://interdance.github.io/",
+      "distribution.contentUrl": "https://drive.google.com/drive/folders/10CAQ_DA9IS87-3phPpiMel9B8UFD-szF?usp=sharing",
       "version": "1.0.0",
       "temporalCoverage" : "2022/2024",
       "funder": [
@@ -204,7 +204,7 @@
 
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://interdance.github.io/"
+                <a href="https://drive.google.com/drive/folders/10CAQ_DA9IS87-3phPpiMel9B8UFD-szF?usp=sharing"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
