--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://interdance.github.io/"
+                <a href="https://github.com/angzong/interDance_API"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
