delete This page is under construction

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="column has-text-centered">
           <h1 class="title is-2 publication-title">InterDance: Reactive 3D Dance Generation 
             with Realistic Duet Interactions </h1>
-          <h2 class="title is-4 publication-title">This page is under construction🔨</h2>
+          <!-- <h2 class="title is-4 publication-title">This page is under construction🔨</h2> -->
           <div class="is-size-4 publication-authors">
             <span class="author-block">
               <a href="https://li-ronghui.github.io/">Ronghui Li</a><sup>*<sup>1,2</sup>,</span>
